Fix: OPEX-348 align no data message (#214)

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -268,11 +268,6 @@
   th:first-child {
     text-align: left;
   }
-
-  td:last-child,
-  th:last-child {
-    text-align: right;
-  }
 }
 
 body, html {
